welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:4: error: Boolean does not take parameters
}else (estFaceMur()==true){
                          ^