welcome.lessons.welcome.loopfor.LoopStairs.scala.code
baisseBrosse()
if (estFaceMur()==false){
  avance()
}else (estFaceMur()==true){
  gauche()
  avance()
  droite()
  avance()
}
